--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pyrofork
 motor
 TgCrypto
 Dnspython
-https://devgagan.in/wp-content/uploads/2023/12/gagantelethon.zip
+telethon
 cryptg
 tgcrypto
 Pyrogram==2.0.93
